prevent page flicker - updated room info

--- a/public/stylesheets/m_style.css
+++ b/public/stylesheets/m_style.css
@@ -191,7 +191,7 @@ nav {
 }
 .sil-nav-options {
   line-height: 80px;
-  width: inherit;
+  width: auto;
 }
 
 
