--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,7 +40,7 @@ body {
   right: 4px; 
 }
 .sil-nav-options {
-  width: 16em;
+  width: 250px;
 }
 .sil-nav-option {
   min-width: 50px;
@@ -306,7 +306,7 @@ nav {
 }
 .sil-room-info {
   border: 1px solid #3333ff;
-  max-width: 210px;
+  width: 250px;
   margin: 0 auto;
   margin-top: -1px;
 }
